<?xml version="1.0"?>
<package>
    <name>pibot</name>
    <version>0.1.0</version>
    <description>Driver for controlling the pibot</description>
    <maintainer email="a@b.com">Phil</maintainer>
    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>roslint</build_depend>
    <run_depend>rospy</run_depend>
    <run_depend>std_msgs</run_depend>
</package>